DE362663: Removed deprecated MaxPermSize JVM flag (#766)
* DE362663: Housekeeping - removed deprecated MaxPermSize JVM flag and reference to Java 1.6 from startup scripts. It's just ignored from Java 7 so it's meaningless and confusing to customers.

* NORALLY: Removed redundant variable unset