@@ -12,7 +12,6 @@ function extractProperty() {
 
 if [ ! -z "${SSGNODE}" ] ; then
     NODE_PROPS_PATH="${SSG_HOME}/node/${SSGNODE}/etc/conf/node.properties"
-    NODE_DEFAULT_MAX_PERM_SIZE="256M"
 
     if [ -f "${NODE_PROPS_PATH}" ] ; then
         extractProperty "node.java.path" NODE_JAVA_HOME "${NODE_PROPS_PATH}"
@@ -48,11 +47,6 @@ if [ ! -z "${SSGNODE}" ] ; then
             fi
         fi
 
-        echo "${NODE_OPTS}" | grep "\-XX:MaxPermSize" &>/dev/null
-        if [ ${?} -ne 0 ] ; then
-            NODE_OPTS="${NODE_OPTS} -XX:MaxPermSize=${NODE_DEFAULT_MAX_PERM_SIZE}"
-        fi
-
         export NODE_OPTS
 
         unset NODE_JAVA_HOME
@@ -60,5 +54,4 @@ if [ ! -z "${SSGNODE}" ] ; then
         unset NODE_JAVA_OPTS
     fi
     unset NODE_PROPS_PATH
-    unset NODE_DEFAULT_MAX_PERM_SIZE
 fi
